--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<version>9.1-901.jdbc4</version>
 		</dependency-->
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>2.6.0</version>
